force-app/commons/httpMocks/objects/HttpCalloutMock__mdt/HttpCalloutMock__mdt.object-meta.xml
<CustomObject>
    <label>Http Callout Mock</label>
    <pluralLabel>Http Callout Mocks</pluralLabel>
</CustomObject>