force-app/commons/httpMocks/objects/HttpCalloutMock__mdt/fields/ApexClass__c.field-meta.xml
<CustomField>
    <fullName>ApexClass__c</fullName>
    <inlineHelpText>Name of Apex Class implementing HttpCalloutMock interface that produces response. Alternative to Response__c &amp; StaticResource__c. Class  must be public and have public no-args constructor.</inlineHelpText>
    <label>Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>