force-app/commons/httpMocks/objects/HttpCalloutMock__mdt/fields/ApexClassNamespace__c.field-meta.xml
<CustomField>
    <fullName>ApexClassNamespace__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <label>Apex Class Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>