force-app/commons/httpMocks/objects/HttpCalloutMock__mdt/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Default mocks are loaded in the router, while all non-defaults can be used to override default mock in unit tests.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>