force-app/commons/httpMocks/objects/HttpCalloutMock__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <inlineHelpText>Regexp pattern for endpoint. It can contain variables denoted by double curly braces. 
Make sure it matches different URL parameters.</inlineHelpText>
    <label>Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>