force-app/commons/httpMocks/objects/HttpCalloutMock__mdt/fields/Headers__c.field-meta.xml
<CustomField>
    <fullName>Headers__c</fullName>
    <inlineHelpText>Specify header per line, in following format:
HeaderName: HeaderValue

ex. 
Content-Type: application/json; charset=utf-8
Expires: -1
Server: Microsoft-IIS/10.0
X-AspNet-Version: 4.0.30319
X-Powered-By: ASP.NET
Date: Wed, 10 Jul 2024 17:06:24 GMT
Connection: close
Content-Length: 41</inlineHelpText>
    <label>Headers</label>
    <type>TextArea</type>
</CustomField>