force-app/commons/httpMocks/objects/HttpCalloutMock__mdt/fields/MatchingHeader__c.field-meta.xml
<CustomField>
    <fullName>MatchingHeader__c</fullName>
    <inlineHelpText>Routes response based on the value of this request header. Format - &quot;Header: Value&quot;</inlineHelpText>
    <label>Matching Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>