force-app/commons/httpMocks/objects/HttpCalloutMock__mdt/fields/Methods__c.field-meta.xml
<CustomField>
    <fullName>Methods__c</fullName>
    <inlineHelpText>Comma separated methods to match - ex. &quot;GET,POST&quot;</inlineHelpText>
    <label>Methods</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>