force-app/commons/httpMocks/objects/HttpCalloutMock__mdt/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <inlineHelpText>Source of the Http Response - Plain Response Body, Apex class name or Static Resource Name.</inlineHelpText>
    <label>Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>