force-app/commons/httpMocks/objects/HttpCalloutMock__mdt/fields/StaticResource__c.field-meta.xml
<CustomField>
    <fullName>StaticResource__c</fullName>
    <inlineHelpText>Alternative ot Response__c. If this is provided with Static Resource name, it&apos;s body will be used as response.</inlineHelpText>
    <label>Static Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>