force-app/commons/httpMocks/objects/HttpCalloutMock__mdt/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>