force-app/commons/httpMocks/objects/HttpCalloutMock__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plain Body</fullName>
                <default>true</default>
                <label>Plain Body</label>
            </value>
            <value>
                <fullName>Static Resource</fullName>
            </value>

            <value>
                <fullName>Apex Class</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>