force-app/commons/httpMocks/objects/HttpCalloutMock__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Default__c</columns>
    <columns>Methods__c</columns>
    <columns>Endpoint__c</columns>
    <columns>StatusCode__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Response__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>